# FC-IG-Lead-Discovery

./: .gitignore  HANDOFF.md  README.md  docker-compose.yml  env.example  pyproject.toml
app/api/: main.py
app/core/: cooldown_reaper.py  crypto.py  ig_session.py  input_normalize.py  logging.py  rate_limiter.py  scheduler.py  settings.py  supabase_client.py  test_mode.py
app/modules/m1_tagged_crawler/: crawler.py  ig_api.py  queue.py  repository.py  worker.py
app/modules/m2_hashtag_scraper/: ig_api.py  scraper.py  worker.py
app/modules/m3_cross_platform/: research.py  tiktok.py  worker.py  (+2 more)
docker/: Dockerfile
docs/: M0_runbook.md  M0_zero_cost_setup.md  M1_runbook.md  M2_runbook.md  M3_runbook.md  m5_vibe.md  m7_m8.md  opener_bridge.md  testing_runbook.md
fc_ig_lead_discovery.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
migrations/: 001_initial_schema.sql  002_mason_corpus.sql  002_opener_review.sql  003_celebrity_dq.sql  004_warming_action_discord.sql  005_seed_hashtags.sql  006_operator_mode.sql
scripts/: approve_openers.py  capture_session.py  clear_global_commands.py  inspect_continue_gate.py  smoke_test.py  test_ig_live.py
tests/: conftest.py  test_cooldown_reaper.py  test_ig_session_cookie_load.py  test_m5_cooldown_escalation.py  test_m5_executor_media_pick.py  test_m5_story_actions_executor.py  test_m5_story_actions_planner.py  test_m5_vibe_classifier.py  test_m6_sender_preflight.py  test_m7_io_dm_loaders.py  test_m7_selling_map.py  test_m7_send_dm_strategies.py  test_m7_validator.py  test_operator_input_surface.py  test_operator_mode_planner.py
(+28 files in other folders)
