[project]
name = "fc-ig-lead-discovery"
version = "0.1.0"
description = "Instagram lead discovery and conversational sales engine"
requires-python = ">=3.10"
dependencies = [
    # Browser automation
    "playwright>=1.45.0",
    "playwright-stealth>=1.0.6",
    # HTTP / parsing
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "tldextract>=5.1.0",
    # Database
    "supabase>=2.7.0",
    "psycopg[binary]>=3.2.0",
    # LLM
    "anthropic>=0.40.0",
    # API / scheduling
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "apscheduler>=3.10.0",
    # Utilities
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "cryptography>=43.0.0",
    "discord.py>=2.4.0",
    # Cross-platform scraping (M3)
    "google-api-python-client>=2.140.0",   # YouTube
    "yt-dlp>=2024.8.0",                     # YouTube fallback
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "ipython>=8.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ASYNC"]
ignore = ["S101"]   # allow assert in dev

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
